--- a/views/emailVerification.ejs
+++ b/views/emailVerification.ejs
@@ -21,6 +21,11 @@
                     <div class="col-lg-8">
                         <h2 class="fw-bold mb-5">EMAIL VERIFIED <i class="fa fa-check"></i></h2>
 
+                        <% if (errorMessage) {%>
+                            <div class="error-message"><%= errorMessage %></div>
+                        <% } %>
+                        <hr>
+
                         <a href="/login"><button class="btn btn-dark btn-lg btn-rounded px-5">LOGIN</button></a><p></p>
 
                     </div>
