--- a/views/editUserInfo.ejs
+++ b/views/editUserInfo.ejs
@@ -5,42 +5,46 @@
     <!-- Background image -->
     <div class="p-5 bg-image" style="
         background-image: url('https://mdbootstrap.com/img/new/textures/full/252.jpg');
-        height: 300px;
+        height: 200px;
         "></div>
     <!-- Background image -->
 
-    <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong"
-             style="
-             margin-top: -100px;
+    <div class="container-fluid container-sm">
+        <div class="col d-flex justify-content-center">
+            <div class="card mx-4 mx-md-5 shadow-5-strong mb-4"
+                 style="
+             margin-top: -150px;
              background: hsla(0, 0%, 100%, 0.8);
              backdrop-filter: blur(30px);">
 
-            <div class="card-body py-5 px-md-5">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">
-                            UPDATE PROFILE
-                            <i class="fa <%= user.gender === 'Male' ? 'fa-male' : 'fa-female'%>"></i>
-                        </h2>
-                        <hr>
+                <div class="col d-flex justify-content-center">
+                    <div class="card-body py-5 px-md-5">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-lg-12">
+                                <h2 class="fw-bold mb-5">
+                                    UPDATE PROFILE
+                                    <i class="fa <%= user.gender === 'Male' ? 'fa-male' : 'fa-female'%>"></i>
+                                </h2>
+                                <hr>
 
 
-                        <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
+                                <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
 
-                            <%- include('include/_editForm'); %>
+                                    <%- include('include/_editForm'); %>
 
-                            <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
-                            <a href="/users"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
+                                    <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
+                                    <a href="/users"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
 
-                        </form>
+                                </form>
 
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
-
         </div>
-    </div>
+
 
 </section>
 
