--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -1,3 +1,4 @@
+
 <div class="row">
     <div class="col-md-6 mb-4">
         <div class="form-outline">
@@ -23,8 +24,10 @@
     <label for="typePassword" class="form-label">Password</label>
 </div>
 
-<div class="form-group">
-    <h5><label for="gender" class="text-uppercase">Gender</label></h5>
+<div class="form-group text-left">
+    <div class="form-check form-check-inline">
+        <h5><label for="status" class="text-uppercase form-check-label">Gender</label><br></h5>
+    </div>
 
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" value="Male" name="gender" id="radio1" <%= user.gender === 'Male' ? 'checked' : ''%>>
@@ -42,8 +45,10 @@
 
 </div>
 
-<div class="form-group">
-    <h5><label for="status" class="text-uppercase">Status</label><br></h5>
+<div class="form-group text-left">
+    <div class="form-check form-check-inline">
+        <h5><label for="status" class="text-uppercase form-check-label">Status</label><br></h5>
+    </div>
 
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" value="Employed" name="status" id="radio3" <%= user.status === 'Employed' ? 'checked' : ''%>>
@@ -61,8 +66,10 @@
 
 </div>
 
-<div class="form-group">
-    <h5><label for="role" class="text-uppercase">Role</label></h5>
+<div class="form-group text-left">
+    <div class="form-check form-check-inline">
+        <h5><label for="status" class="text-uppercase form-check-label">Role</label><br></h5>
+    </div>
 
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" value="admin" name="role" id="radio5" <%= user.role === 'admin' ? 'checked' : ''%>>
