--- a/views/editUserInfo.ejs
+++ b/views/editUserInfo.ejs
@@ -21,12 +21,10 @@
                     <div class="card-body py-5 px-md-5">
                         <div class="row d-flex justify-content-center">
                             <div class="col-lg-12">
-                                <h2 class="fw-bold mb-5">
-                                    UPDATE PROFILE
-                                    <i class="fa <%= user.gender === 'Male' ? 'fa-male' : 'fa-female'%>"></i>
-                                </h2>
+                                <img src=" <%= "img/" + user.id %> " class="rounded-circle" style="width: 150px;"
+                                     alt="Avatar" />
+                                <a href=" <%= "/userpage/update-user/upload-image/" + user.id %> "><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">Change Avatar</button></a>
                                 <hr>
-
 
                                 <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
 
