--- a/views/editUserSelf.ejs
+++ b/views/editUserSelf.ejs
@@ -9,33 +9,37 @@
         "></div>
     <!-- Background image -->
 
-    <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong"
-             style="
-             margin-top: -100px;
+    <div class="container-fluid container-sm">
+        <div class="col d-flex justify-content-center">
+            <div class="card mx-4 mx-md-5 shadow-5-strong"
+                 style="
+             margin-top: -200px;
              background: hsla(0, 0%, 100%, 0.8);
              backdrop-filter: blur(30px);">
 
-            <div class="card-body py-5 px-md-5">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">
-                            <%= user.emailVerified%>
-                            <i class="fa <%= user.gender === 'Male' ? 'fa-male' : 'fa-female'%>"></i>
-                        </h2><hr>
+                <div class="col d-flex justify-content-center">
+                    <div class="card-body py-5 px-md-5">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-lg-12">
+                                <img src=" <%= "img/" + user.id %> " class="rounded-circle" style="width: 150px;"
+                                     alt="Avatar" />
+                                <a href=" <%= "/userpage/update-user/upload-image/" + user.id %> "><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">Change Avatar</button></a>
+                                <hr>
 
-                        <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
+                                <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
 
-                            <%- include('include/_editForm'); %>
+                                    <%- include('include/_editForm'); %>
 
-                            <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
-                            <a href="/userpage"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
-                        </form>
+                                    <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
+                                    <a href="/userpage"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
+                                </form>
 
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
 
