--- a/views/editUserSelf.ejs
+++ b/views/editUserSelf.ejs
@@ -21,7 +21,7 @@
                     <div class="card-body py-5 px-md-5">
                         <div class="row d-flex justify-content-center">
                             <div class="col-lg-12">
-                                <img src=" <%= "img/" + user.id %> " class="rounded-circle" style="width: 150px;"
+                                <img src=" <%= "../server/upload/avatars/" + user.id %> " class="rounded-circle" style="width: 150px;"
                                      alt="Avatar" />
                                 <a href=" <%= "/userpage/update-user/upload-image/" + user.id %> "><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">Change Avatar</button></a>
                                 <hr>
