--- a/views/include/_sessionDetails.ejs
+++ b/views/include/_sessionDetails.ejs
@@ -7,6 +7,8 @@
             <div class="col-md-12 text-center">
                 <h2 class="pt-3 pb-2 text-center font-bold font-up">Session Details <i class="fa fa-user"></i></h2>
 
+                <img src=" <%= "/public/avatars/" + user.id + ".png" %> " class="rounded-circle" style="width: 150px;" alt="Avatar" />
+
                 <div class="text-center">
                     <p>Logged in as</p>
                     <p class="font-italic">" <%= user.email %> "</p>
